added register with the api doesnt work

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 body{
+    display: block;
     font-family: 'Poppins', sans-serif;
-    background: #ececec;
+    background: #ffffff;
+    line-height: 1.5;
+
 }
 
 .divider:after,
