--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -94,7 +94,7 @@ body {
   display: flex;
 }
 
-#layoutSidenav_nav{
+#layoutSidenav_nav {
   height: 100vh;
 }
 
@@ -316,173 +316,123 @@ body {
   background-color: #e9ecef;
 }
 
-
 /* -- chat -- */
 
-.chat_window {
-  /* background-color: #fff; */
-  /* background-color: #f8f8f8; */
+.chat-screen {
+  
 }
 
-.top_menu {
-  /* background-color: #fff; */
-  width: 100%;
-  /* padding: 20px 0 15px; */
-}
-.top_menu .buttons {
-  margin: 3px 0 0 20px;
-  position: absolute;
-}
-.top_menu .buttons .button {
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  display: inline-block;
-  margin-right: 10px;
-  position: relative;
-}
-
-.top_menu .title {
-  text-align: center;
-  color: #bcbdc0;
-  font-size: 20px;
-}
-
-.messages {
-  position: relative;
-  list-style: none;
-  padding: 20px 10px 0 10px;
-  margin: 0;
-  height: 347px;
-  overflow: scroll;
-}
-.messages .message {
-  clear: both;
-  overflow: hidden;
-  margin-bottom: 20px;
-  transition: all 0.5s linear;
-  opacity: 0;
-}
-.messages .message.left .avatar {
-  background-color: #f5886e;
-  float: left;
-}
-.messages .message.left .text_wrapper {
-  background-color: #ffe6cb;
-  margin-left: 20px;
-}
-.messages .message.left .text_wrapper::after, .messages .message.left .text_wrapper::before {
-  right: 100%;
-  border-right-color: #ffe6cb;
-}
-.messages .message.left .text {
-  color: #c48843;
-}
-.messages .message.right .avatar {
-  background-color: #fdbf68;
-  float: right;
-}
-.messages .message.right .text_wrapper {
-  background-color: #c7eafc;
-  margin-right: 20px;
-  float: right;
-}
-.messages .message.right .text_wrapper::after, .messages .message.right .text_wrapper::before {
-  left: 100%;
-  border-left-color: #c7eafc;
-}
-.messages .message.right .text {
-  color: #45829b;
-}
-.messages .message.appeared {
-  opacity: 1;
-}
-.messages .message .avatar {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  display: inline-block;
-}
-.messages .message .text_wrapper {
-  display: inline-block;
-  padding: 20px;
-  border-radius: 6px;
-  width: calc(100% - 85px);
-  min-width: 100px;
-  position: relative;
-}
-.messages .message .text_wrapper::after, .messages .message .text_wrapper:before {
-  top: 18px;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.messages .message .text_wrapper::after {
-  border-width: 13px;
-  margin-top: 0px;
-}
-.messages .message .text_wrapper::before {
-  border-width: 15px;
-  margin-top: -2px;
-}
-.messages .message .text_wrapper .text {
-  font-size: 18px;
-  font-weight: 300;
-}
-
-.bottom_wrapper {
-  position: relative;
-  width: 100%;
-  background-color: #fff;
-  padding: 20px 20px;
-  position: absolute;
-  bottom: 0;
-}
-.bottom_wrapper .message_input_wrapper {
-  display: inline-block;
+.chat-screen .header {
   height: 50px;
-  border-radius: 25px;
-  border: 1px solid #bcbdc0;
-  width: calc(100% - 160px);
-  position: relative;
-  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:0px;
 }
-.bottom_wrapper .message_input_wrapper .message_input {
-  border: none;
-  height: 100%;
-  box-sizing: border-box;
-  width: calc(100% - 40px);
-  position: absolute;
-  outline-width: 0;
-  color: gray;
+
+.chat-screen .header .logo {
+  font-size:18px;
+  color:#eee;
+  font-weight:600px;
 }
-.bottom_wrapper .send_message {
-  width: 140px;
-  height: 50px;
-  display: inline-block;
-  border-radius: 50px;
-  background-color: #a3d063;
-  border: 2px solid #a3d063;
-  color: #fff;
+
+.chat-screen .header button{
+  padding:5px 10px;
+  background: transparent;
+  color: #eee;
   cursor: pointer;
-  transition: all 0.2s linear;
-  text-align: center;
-  float: right;
-}
-.bottom_wrapper .send_message:hover {
-  color: #a3d063;
-  background-color: #fff;
-}
-.bottom_wrapper .send_message .text {
-  font-size: 18px;
-  font-weight: 300;
-  display: inline-block;
-  line-height: 48px;
+  font-size:15px;
+  outline: none;
 }
 
-.message_template {
-  display: none;
+.chat-screen .messages {
+  width: 100%;
+  overflow: auto;
+}
+
+.chat-screen .messages .message{
+  display:flex;
+  padding: 10px;
+}
+
+.chat-screen .messages .message > div {
+  max-width: 80%;
+  box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.05);
+  
+}
+
+.other-message > div > .chat-text  {
+  background: #374151;
+  color: #fff;
+  padding:10px;
+  padding-left:20px;
+  padding-right:20px;
+  border-radius: 10px;
+}
+
+.my-message > div > .chat-text  {
+  background: #115E59;
+  color: #fff;
+  padding:10px;
+  padding-left:20px;
+  padding-right:20px;
+  border-radius: 10px;
+}
+
+.chat-screen .messages .message.my-message {
+  justify-content: flex-end;
+}
+
+.chat-screen .messages .message.other-message {
+  justify-content: flex-start;
+}
+
+.chat-screen .messages .message .chat-name {
+  font-size: 13px;
+  color: #9096A2;
+  margin-bottom:5px;
+}
+
+.chat-screen .messages .message .chat-text {
+  word-wrap:break-word;
+}
+
+.chat-screen .messages .update {
+  text-align: center;
+  padding:10px;
+  font-style:italic;
+}
+
+.chat-screen .typebox {
+  width:100%;
+  height: 50px;
+  display: flex;
+}
+
+.chat-screen .typebox input {
+  flex: 1;
+  height: 50px;
+  background:#374151;
+  border:none;
+  color:white;
+  padding-left: 20px;
+  padding-right: 20px;
+  outline:none;
+  font-size:18px;
+  border-radius: 10px;
+}
+
+#icon-send{
+  color:white;
+}
+
+.chat-screen .typebox button{
+  width: 50px;
+  height: 100%;
+  margin-left: 10px;
+  border-radius: 10px;
+  background: #14B8A6;
+  outline:none;
+  border:none;
+  cursor: pointer;
 }
