--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -326,14 +326,15 @@ body {
   height:600px;
 }
 
-.cst-test {
+.chat-rm-margin {
   margin:0px;
 }
 
-.cst-test1{
+.chat-flex{
   max-width:450px;
 }
 
 .chat-text{
   font-size :16px;
 }
+
