--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -243,3 +243,6 @@ button.btn.btn-primary:active {
 .bg-custom {
   background-color: #f6f8fb !important;
 }
+.edit-profil-btn {
+  color: white;
+}
