--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -281,3 +281,17 @@ canvas {
     transform: translate(-50%, -50%);
     z-index: 1;
 }
+
+#Winner-text {
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
+#Timer {
+	top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
