match history profile images, score can be seen still need to fix the bug when changing language

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -430,3 +430,14 @@ canvas {
   } .game-history-container{
 	width:200px;
   }
+
+
+  .img-match-history{
+	width:60px;
+	height:60px;
+  }
+
+  .img-profile-avatar{
+	width:100px;
+	height:100px;
+  }
