added game chat invite, fixed chat vuln

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -121,6 +121,11 @@ button.btn.btn-primary:active {
 	border: none;
 }
 
+#send-invite {
+	background-color: #4E5057;
+	border: none;
+}
+
 
 /*Chat messages */
 
